[bdist_wheel]
universal=1

[metadata]
name = pyspeckle
version = 0.3.0
author = Scott Prahl
author_email = scott.prahl@oit.edu
url = https://github.com/scottprahl/pyspeckle.git
license = MIT
description = Routines for analysis of laser speckle
keywords =
    objective speckle
    subjective speckle
    speckle contrast
    speckle size

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = pyspeckle
install_requires = numpy; matplotlib
python_requires = >=3.4
zip_safe = True
setup_requires = setuptools>=44
