[metadata]
name = pyspeckle
version = 0.4.1
author = Scott Prahl
author_email = scott.prahl@oit.edu
url = https://github.com/scottprahl/pyspeckle.git
license = MIT
description = Routines for analysis of laser speckle
keywords =
    speckle
    objective
    subjective
    contrast
    size
    autocorrelation
    ACF
    PDF
    laser

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = pyspeckle
install_requires = numpy; matplotlib
python_requires = >=3.4
zip_safe = True
setup_requires = setuptools>=44

[flake8]
ignore = W503, D212
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
    tests/test_jit.py:D100,D101,D102
    tests/test_nojit.py:D100,D101,D102
    tests/conftest.py:D100,D101,D102,D103
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 99
docstring-convention = google
